Wed Jul 30 08:42:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.15.

	* Version 1.9.14.

	* create_adm.c, cvs.h (Create_Admin): If new argument WARN is set,
	then make creating the CVS directory itself a warning not a fatal
	error.  New return value indicates whether we did this.
	* checkout.c (build_one_dir), client.c (call_in_directory):
	Pass WARN as one.
	* add.c, client.c, checkout.c, modules.c, update.c: Pass WARN as
	zero for all other Create_Admin callers.
	* sanity.sh (toplevel): New test toplevel-12 tests for this fix.
	* filesubr.c (mkdir_if_needed): Also check EACCES/isdir.  Needed
	to make toplevel-12 test work.

	* sanity.sh (toplevel): New test toplevel-11 and friends test for
	another variation of the toplevel-9 bug.

Tue Jul 29 12:11:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* login.c (construct_cvspass_filename): Revert this change.  The
	main reason is procedural; Karl is not a current CVS developer.
	The other thing is that the new text doesn't say anything about
	HOMEDRIVE and HOMEPATH.

Tue Jul 29 11:36:22 1997  Karl Fogel  <kfogel@harvey.cyclic.com>

	* login.c (construct_cvspass_filename): error message informs user
	she may need to set HOME environment variable by hand.

Sun Jul 27 15:36:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* admin.c (admin): Remove comment "XXX send -ko too with i = 0".
	It turns out to be a description of a bugfix which was applied on
	8 Oct 1995, and never should have been in a comment in the first
	place.

	* admin.c (admin, admin_fileproc): Parse options ourself rather
	than blindly passing them to RCS.
	Accordingly, add struct admin_data and function arg_add, and delete
	global variables ac and av.
	* sanity.sh (admin): Change admin-3 test to reflect cvs admin -i
	now being an error.
	(basicb): Change basicb-21 test to relect the improved error
	message here.

Sat Jul 26 11:34:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
