@@ -1,5 +1,8 @@
 Wed Jul 30 08:42:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* parseinfo.c (parse_config): If AUTH_SERVER_SUPPORT is not
+	defined, don't set system_auth.
+
 	* version.c: Change version number to 1.9.15.
 
 	* Version 1.9.14.
